--- a/examples/example/CMakeLists.txt
+++ b/examples/example/CMakeLists.txt
@@ -1,4 +1,5 @@
 
 
-add_executable(example main.cpp sha1.c crc.c)
+# add_executable(example main.cpp sha1.c crc.c)
+add_executable(example main_arm.cpp)
 target_link_libraries(example PUBLIC system)
