--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/cmsis_device_f4"]
 	path = third_party/cmsis_device_stm32f4
 	url = https://github.com/STMicroelectronics/cmsis_device_f4.git
+[submodule "cmsis_device_stm32f1"]
+	path = cmsis_device_stm32f1
+	url = https://github.com/STMicroelectronics/cmsis_device_f1.git
