--- a/.gitmodules
+++ b/.gitmodules
@@ -17,5 +17,5 @@
 	path = third_party/cmsis_device_stm32f4
 	url = https://github.com/STMicroelectronics/cmsis_device_f4.git
 [submodule "cmsis_device_stm32f1"]
-	path = cmsis_device_stm32f1
+	path = third_party/cmsis_device_stm32f1
 	url = https://github.com/STMicroelectronics/cmsis_device_f1.git
