--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "cmsis_device_stm32f1"]
 	path = third_party/cmsis_device_stm32f1
 	url = https://github.com/STMicroelectronics/cmsis_device_f1.git
+[submodule "third_party/stm32f1xx_hal_driver"]
+	path = third_party/stm32f1xx_hal_driver
+	url = https://github.com/STMicroelectronics/stm32f1xx_hal_driver.git
+[submodule "third_party/lwip"]
+	path = third_party/lwip
+	url = https://github.com/lwip-tcpip/lwip.git
