--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ project(
 )
 
 # include(${CMAKE_SOURCE_DIR}/cmake/ARM/stm32f401.cmake)
-# include(${CMAKE_SOURCE_DIR}/cmake/ARM/stm32f405.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/ARM/stm32f107.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/ARM/stm32f405.cmake)
+# include(${CMAKE_SOURCE_DIR}/cmake/ARM/stm32f107.cmake)
 
 add_library(system STATIC)
 
@@ -51,5 +51,5 @@ target_link_libraries(system
 
 
 
-# add_subdirectory(examples/example)
-add_subdirectory(examples/example_stm32f1)
+add_subdirectory(examples/example)
+# add_subdirectory(examples/example_stm32f1)
